--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "autocomplete",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nimdis.github.io/autocomplete",
   "dependencies": {
     "@bem-react/classname": "^1.5.8",
     "@testing-library/jest-dom": "^5.11.5",
